<resources>
    <string name="app_name">ToDoApp</string>
    <string name="set_your_to_do">Set your to do !</string>
    <string name="create_a_goal_and_check_it_every_day">Crate a goal and check it every day!</string>
    <string name="watch_your_personal_growth">Watch your personal-growth.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_language">Select a language</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="today">Today</string>
    <string name="todo">TODO</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="updated">Updated</string>
    <string name="couldnt_updated">Could not updated</string>
    <string name="deleteToDoTitle">Delete To Do</string>
    <string name="coludnt_delete">Could not delete</string>
    <string name="no_to_do">, no to do.</string>
    <string name="deleteToDoMessage">This will delete. Are you sure this ?</string>
    <string name="deleteEventPossitiveMessage">Delete</string>
    <string name="toDoMessageNegativeMessage">Cancel</string>
    <string name="edit">Edit</string>
    <string name="editToDoPositiveMessage">Save</string>
    <string name="update">Update</string>
    <string name="challenge">Challenges</string>
    <string name="challenge_doesnt_exist">You have not any create challenges.</string>
    <string name="add_challenge">Add A New Challenge</string>
    <string name="check_today">Check Today</string>
    <string name="select_a_date">Select a date</string>
    <string name="category">Category</string>
    <string name="challenge_added">Your challenge has been added</string>
    <string name="dates_incorrect">Dates are incorrect</string>
    <string name="fill_fields">Please fill fields</string>
    <string name="statistic">You have not finished any challenges</string>
    <string name="add_a_new_challenge">Your challenge title</string>
    <string name="date_from">From</string>
    <string name="date_to">To</string>
    <string name="done">Done !</string>
    <string name="exit">Exit</string>
    <string name="success">Success</string>
    <string name="checked">Checked</string>
    <string name="couldnt_delete">Could not delete</string>
    <string name="have_checked">You have already checked</string>
    <string name="add_a_task">Add a task</string>
    <string name="task_title">Task title</string>
    <string name="time">Time</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="forgot_my_password">Forgot my password.</string>
    <string name="forgot_my_password_title">Forgot my password</string>
    <string name="sent_email_repassword">Email has been sent. Please check your mail box.</string>
    <string name="challenge_description">Challenge description</string>
    <string name="challenge_completed">Completed</string>
    <string name="send_email">Send an email</string>
    <string name="couldnt_send">Could not send.</string>
    <string name="name_and_surname">Name surname</string>
    <string name="password">Password</string>
    <string name="out_of_date">Out of date</string>
    <string name="my_statistics">My statistics</string>
    <string name="to_do_menu">To do</string>
    <string name="my_challenges_menu">My challenges</string>
    <string name="log_out">Log out</string>
    <string name="dont_have_an_account">Do not have an account ?</string>
    <string name="do_you_have_an_account">Do you have already a account ?</string>
    <string name="change_language">Change language</string>
    <string name="change_theme">Change theme</string>
    <string name="about_app_and_developer">About app and developer</string>
    <string name="settings">Settings</string>
    <string name="okay">Okay</string>
    <string name="thank_you">Thank you</string>
    <string name="congratulations">Congratulations !</string>
    <string name="statistic_has_updated">Your statistics has been updated. Check your statistics</string>
    <string name="will_be_active_after_restarting">Theme will be active after restarting the app</string>
    <string name="about_app_and_developer_message">This application does the activities of the user,
        It is an application created to embody the goals.</string>
    <string name="next">Next</string>

    <string-array name="dates">
        <item>Select a date</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Later</item>
    </string-array>

    <string-array name="datesForDB">
        <item>Select a date</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Later</item>
    </string-array>

    <string-array name="challengeCategory">
        <item>Category</item>
        <item>self-improvement</item>
        <item>Sport</item>
    </string-array>

    <string-array name="challengeCategoryForDB">
        <item>Category</item>
        <item>self-improvement</item>
        <item>Sport</item>
    </string-array>
    <string name="have_done_challange">You have completed the challenge !</string>
</resources>