<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    tools:context=".Fragments.signInFragment">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:id="@+id/signInLogoLayout"
        android:layout_width="match_parent"
        android:minHeight="150dp"
        android:background="@drawable/logo_background_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signInContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInLogoLayout"
        android:gravity="center"
        android:minHeight="400dp">

        <EditText
            android:id="@+id/editTxtNameSurname"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/name_and_surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtNameSurname"
            android:layout_marginTop="18dp"
            android:ems="12"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_address"
            style="@style/TEXT"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtEmail"
            android:layout_marginTop="18dp"
            android:ems="12"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            style="@style/TEXT"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUpSignUpFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtPassword"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style"
            android:ems="12"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInContentLayout"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/txtDoNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            style="@style/TEXT"
            android:text="@string/do_you_have_an_account" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/txtDoNotHaveAccount"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_in"
            style="@style/TEXT"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>