<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    tools:context=".Fragments.signInFragment">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:id="@+id/signInLogoLayout"
        android:layout_width="match_parent"
        android:minHeight="150dp"
        android:background="@drawable/logo_background_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signInContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInLogoLayout"
        android:gravity="center"
        android:minHeight="500dp">

        <EditText
            android:id="@+id/editTxtEmail"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtEmail"
            android:layout_marginTop="18dp"
            android:ems="12"
            style="@style/TEXT"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtForgotMyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtPassword"
            android:layout_marginStart="105dp"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            style="@style/TEXT"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_my_password"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignInToMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtForgotMyPassword"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style"
            android:ems="12"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/signInGoogleLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignInToMainPage"
            android:padding="13dp"
            style="@style/themeBtn"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/googleLogo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:textSize="18sp"
                android:layout_marginStart="45dp"
                android:textColor="@color/white"
                android:layout_toRightOf="@+id/googleLogo"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signInContentLayout"
        android:gravity="center|bottom"
        android:minHeight="150dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/txtDoNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TEXT"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            style="@style/TEXT"
            android:layout_toEndOf="@+id/txtDoNotHaveAccount"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_up"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>