<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_style">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/mainPageItemsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_sheet_shape"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_task"
                android:textSize="22sp"
                android:textStyle="bold"
                style="@style/TEXT"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"/>

            <EditText
                android:id="@+id/editTextTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ems="11"
                android:hint="@string/task_title"
                android:textColorHint="@color/hint_color"
                style="@style/TEXT"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:layout_marginTop="35dp"
                android:background="@drawable/input_shape"
                android:fontFamily="@font/roboto_regular"/>

            <LinearLayout
                android:id="@+id/mainPageDateSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    style="@style/TEXT"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/roboto_regular"/>

                <Spinner
                    android:id="@+id/spinnerDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:minWidth="150dp"
                    style="@style/TEXT"
                    android:contentDescription="@string/select_a_date"
                    android:background="@drawable/input_shape"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddNewTask"
                android:layout_width="wrap_content"
                android:minWidth="250dp"
                android:layout_height="wrap_content"
                android:text="@string/add_a_task"
                android:textAllCaps="false"
                android:background="@drawable/button_style"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/txtBackToList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                style="@style/TEXT"
                android:fontFamily="@font/roboto_light"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>