<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.settingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="220dp"
        android:gravity="center"
        android:background="@color/theme">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="55dp"
            app:cardElevation="5dp"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:background="@drawable/ic_baseline_person_24"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/userNameSurname"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Umut SAYDAM"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        style="@style/TEXT"
        android:id="@+id/btnChangeLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_button_shape"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:text="@string/change_language"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchChangeTheme"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_button_shape"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:text="@string/change_theme"/>

    <Button
        style="@style/TEXT"
        android:id="@+id/btnAboutAppAndDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_button_shape"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:text="@string/about_app_and_developer"/>
</LinearLayout>