<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_menu_style"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cup"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/have_done_challange"
            android:textColor="#F79327"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_below="@+id/imageView"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/statistic_has_updated"
            android:textColor="#F79327"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"/>

        <Button
            android:id="@+id/btnThankYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textAllCaps="false"
            android:ems="8"
            android:text="@string/thank_you"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="17dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView"/>

    </RelativeLayout>




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/confetti" />
</RelativeLayout>